fix typo theses --> these.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1458,7 +1458,7 @@ where $V^\text{tree}$ is the tree-level Higgs potential, $v_i$ is the
 VEV corresponding to the Higgs fields $H_i$ and $t_i$ is the one-loop
 tadpole diagram of $H_i$.  Already at the tree-level ($t_i = 0$) Eqs.\
 \eqref{eq:one-loop-ewsb-eq} can have multiple solutions, depending on
-which paramters are chosen to be fixed by theses equations.  For
+which paramters are chosen to be fixed by these equations.  For
 example in the real MSSM Eqs.\ \eqref{eq:one-loop-ewsb-eq} can only
 determine $|\mu|$, while the sign of $\mu$ is not fixed.  Currently
 \fs handles only real model parameters and renormalizable theories,
