simplify statement about slhaea.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -348,13 +348,13 @@ contributions for the MSSM and NMSSM).
 The standard input and output of the generated code is given in
 SLHA-style format where the user has control of the Block names by
 editing the SARAH files and may also add extra blocks in the
-FlexibleSUSY.m model file which is decribed in section 5. We use the
-well known SLHAea \cite{slhaea} to create these SLHA files and with a
-simple modifications these can be passed directly to another code
-which uses them as an alternative to writing out the SLHA file. Since the
-SLHA standard is intended precisely for the purpose, MSSM and NMSSM
-codes should be compliant with this.  We have tested that the versions
-of HDECAY\cite{hdecay} and SDECAY\cite{sdecay} inside SUSY-HIT
+FlexibleSUSY.m model file which is decribed in section 5. We use
+SLHAea \cite{slhaea} to create these SLHA files and with a simple
+modifications these can be passed directly to another code which uses
+them as an alternative to writing out the SLHA file. Since the SLHA
+standard is intended precisely for the purpose, MSSM and NMSSM codes
+should be compliant with this.  We have tested that the versions of
+HDECAY\cite{hdecay} and SDECAY\cite{sdecay} inside SUSY-HIT
 \cite{susyhit} can understand the SLHA output of FlexibleSUSY and give
 matching output to that from SOFTSUSY.
 
