correcting nightly test results url

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -3059,7 +3059,7 @@ the \code{test/} directory.  The tests can be run with the command
 \code{make execute-tests}.  All unit tests are carried out nightly in
 order to continuously check the correctness of the meta code and the
 generated spectrum generators.  The test results can be found at
-\url{http://iktp.tu-dresden.de/~avoigt/FlexibleSUSY/FlexibleSUSY/test.html}
+\url{http://iktp.tu-dresden.de/~avoigt/FlexibleSUSY/test.xhtml}
 
 The \fs generated NUHM \ESSM\ spectrum generator has also been
 compared against a handwritten one for a constrained version of the
