add refeence for Softsusy 3.5.0

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -3051,8 +3051,9 @@ $\theta_W$ from the muon decay constant $G_\mu$, which is more
 precise.  Furthermore, in Softsusy $3.5.0$ some three-loop
 $\beta$-functions and two-loop threshold corrections for the gauge and
 Yukawa couplings can be enabled in the MSSM to increase the accuracy
-of the RG running and the \DRbar\ gauge and Yukawa couplings at $M_Z$
-\cite{}.  These corrections are not implemented in \fs so far.
+of the RG running and the determination of the \DRbar\ gauge and
+Yukawa couplings at $M_Z$ \cite{Allanach:2014nba}.  These corrections
+are not implemented in \fs so far.
 
 The complete set of unit tests is shipped with \fs and can be found in
 the \code{test/} directory.  The tests can be run with the command
@@ -4104,7 +4105,12 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   %%CITATION = HEP-PH/0509048;%%
   %27 citations counted in INSPIRE as of 05 Jun 2014
 
-
+\bibitem{Allanach:2014nba}
+  B.~C.~Allanach, A.~Bednyakov and R.~Ruiz de Austri,
+  %``Higher Order Corrections and Unification in the Minimal Supersymmetric Standard Model: SOFTSUSY3.5.0,''
+  arXiv:1407.6130 [hep-ph].
+  %%CITATION = ARXIV:1407.6130;%%
+  %2 citations counted in INSPIRE as of 03 Nov 2014
 
 %\cite{Athron:2009ue}
 \bibitem{Athron:2009ue} 
