note that CP-violating phases are set to zero
because only real model parameters are currently allowed.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1371,10 +1371,10 @@ fermion mass matrices are composed as
 %
 where the values for $m_{u,c,d,s,e,\mu}^{\userinput}$ are read from
 the \code{SMINPUTS} block of the SLHA input file \cite{Skands:2003cj}.
-The CKM mixing matrix is currently assumed to be diagonal.  The third
-generation quark masses are calculated in the \DRbar scheme from the
-SLHA user input quantities $m_t^\text{pole}$,
-$m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$ and
+The CKM mixing matrix is currently set to unity and CP-violating
+phases are set to zero.  The third generation quark masses are
+calculated in the \DRbar scheme from the SLHA user input quantities
+$m_t^\text{pole}$, $m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$ and
 $m_{\tau,\text{SM}}^{\text{\MSbar}}(M_Z)$ \cite{Skands:2003cj}.  In
 detail, the top quark \DRbar mass is calculated as
 %
