reformulate caption in Table 2
This addresses referee 2, comment 2

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -3148,9 +3148,9 @@ Intel Xeon CPUs (L5640, $2.27\unit{GHz}$, $6$ cores) was used.
     \bottomrule
   \end{tabular}
   \caption{Average run-time of CMSSM spectrum generators
-    for random parameter points.  The first three rows show
-    spectrum generators which disallow sfermion flavour violation.  Rows
-    $4$--$5$ contain sfermion flavour violating spectrum generators, based
+    for random parameter points.  The first three rows show three
+    spectrum generators with disabled sfermion flavour violation.  Rows
+    $4$--$5$ show two spectrum generators with enabled sfermion flavour violation, both based
     on SARAH's MSSM model file.}
   \label{tab:run-time-comparison}
 \end{table}
