--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ FlexibleSUSY-1.0.3 [not released yet]
    stripping group factors.  Thanks to Philip Diessner and Wojciech
    Kotlarski.
 
+ * Bugfix (commit 7160095): Correcting check for tachyons in pole
+   masses of scalar particles, calculated with LowPrecision
+
 FlexibleSUSY-1.0.2 [July, 15 2014]
 
  * Bugfix (commit 689141da): Enable non-quadratic superpotential
