adding sdown, selectron, neutralino to pole mass table

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2046,17 +2046,29 @@ can consider calculating then with \code{MediumPrecision} only.
     & \code{HighPrecision}\\
     \midrule
     $m_h$
-    & $1441\unit{GeV}$ ($0.96\unit{ms}$)
-    & $128\unit{GeV}$ ($2.53\unit{ms}$)
-    & $126\unit{GeV}$ ($9.79\unit{ms}$) \\
+    & --
+    & $128.3\unit{GeV}$ ($2.45\unit{ms}$)
+    & $126.3\unit{GeV}$ ($9.53\unit{ms}$) \\
     $m_{\tilde{g}}$
     & $10167\unit{GeV}$ ($0.10\unit{ms}$)
     & $10167\unit{GeV}$ ($0.10\unit{ms}$)
-    & $10251\unit{GeV}$ ($0.41\unit{ms}$) \\
+    & $10251\unit{GeV}$ ($0.38\unit{ms}$) \\
+    $m_{\tilde{\chi}_1}$
+    & $2295\unit{GeV}$ ($4.17\unit{ms}$)
+    & $2295\unit{GeV}$ ($16.1\unit{ms}$)
+    & $2295\unit{GeV}$ ($64.2\unit{ms}$) \\
     $m_{\tilde{u}_1}$
-    & $8702\unit{GeV}$ ($2.57\unit{ms}$)
-    & $8714\unit{GeV}$ ($15.7\unit{ms}$)
-    & $8734\unit{GeV}$ ($60.9\unit{ms}$) \\
+    & $8703\unit{GeV}$ ($2.45\unit{ms}$)
+    & $8714\unit{GeV}$ ($14.9\unit{ms}$)
+    & $8734\unit{GeV}$ ($58.5\unit{ms}$) \\
+    $m_{\tilde{d}_1}$
+    & $10442\unit{GeV}$ ($2.48\unit{ms}$)
+    & $10391\unit{GeV}$ ($15.0\unit{ms}$)
+    & $10418\unit{GeV}$ ($59.9\unit{ms}$) \\
+    $m_{\tilde{e}_1}$
+    & $7913\unit{GeV}$ ($1.94\unit{ms}$)
+    & $7909\unit{GeV}$ ($11.2\unit{ms}$)
+    & $7909\unit{GeV}$ ($34.1\unit{ms}$) \\
     \bottomrule
   \end{tabular}
   \caption{Comparison of pole masses with different calculation
