align columns to the right

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2039,7 +2039,7 @@ can consider calculating then with \code{MediumPrecision} only.
 %
 \begin{table}[tbh]
   \centering
-  \begin{tabular}{llll}
+  \begin{tabular}{lrrr}
     \toprule
     & \code{LowPrecision}
     & \code{MediumPrecision}
