--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1480,7 +1480,8 @@ EWSB consistency conditions are formulated in \fs at the one-loop
 level as
 %
 \begin{align}
-  0 = \frac{\partial V^\text{tree}}{\partial v_i} - t_i,
+  0 &= \frac{\partial V^\text{tree}}{\partial v_i} - t_i,
+  & & (i=1,\ldots,N)
   \label{eq:one-loop-ewsb-eq}
 \end{align}
 %
@@ -1488,47 +1489,99 @@ where $V^\text{tree}$ is the tree-level Higgs potential, $v_i$ is the
 VEV corresponding to the Higgs fields $H_i$ and $t_i$ is the one-loop
 tadpole diagram of $H_i$.  Already at the tree-level ($t_i = 0$) Eqs.\
 \eqref{eq:one-loop-ewsb-eq} can have multiple solutions, depending on
-which paramters are chosen to be fixed by these equations.  For
-example in the real MSSM Eqs.\ \eqref{eq:one-loop-ewsb-eq} can only
-determine $|\mu|$, while the sign of $\mu$ is not fixed.  Currently
-\fs handles only real model parameters and renormalizable theories,
-which restricts the number of possible multiple solutions of Eqs.\
-\eqref{eq:one-loop-ewsb-eq} to be less or equal to four times the
-number of equations.  In some cases, as for example in the real MSSM,
-% where $\mu$ is chosen to be fixed by the EWSB equations
-these different solutions might be related by one or more free global
-signs in the form
+which paramters are chosen to be fixed by these equations.  A
+well-known example is the real MSSM, where the $\mu$-parameter is
+chosen to be fixed by the EWSB equations.  In this model, the EWSB
+equations, Eqs.\ \eqref{eq:one-loop-ewsb-eq} can only determine
+$|\mu|$, while the sign of $\mu$ is not fixed.  This results in two
+solutions for $\mu$ of the form
 %
 \begin{align}
-  \mu = \sign\mu \cdot \sqrt{\ldots} .
+  \mu = \sign\mu \cdot |\mu| .
+  \label{eq:EWSB-solution-for-mu}
 \end{align}
 %
-\fs recognizes such cases and introduces these global signs as
-additional free parameters.  The case of the real MSSM, where only
-$|\mu|$ is fixed by the EWSB equations, is therefore handled
-automatically.  If, however, the different solutions are not related
-by global signs, then \fs writes all solutions to the file
+Currently, \fs handles only real model parameters and renormalizable
+theories, which restricts the number of possible multiple solutions of
+Eqs.\ \eqref{eq:one-loop-ewsb-eq} to be less or equal to $4N$.  In
+some cases, as for example in the real MSSM, the different solutions
+are related by one or more global signs as in
+Eq.~\eqref{eq:EWSB-solution-for-mu}.  \fs recognizes such cases and
+introduces these global signs as additional free parameters to allow
+the user to chose between the different solutions.  The case of the
+real MSSM Eq.~\eqref{eq:EWSB-solution-for-mu} is therefore handled
+automatically in \fs, because $\sign\mu$ is automatically introduced
+as an additional free parameter.
+
+If, however, the different solutions are not related by global signs,
+then \fs writes all solutions to the file
 \code{models/<model>/<model>_tree_level_EWSB_solution.m}.  The user
 has then the option to pick a particular solution by setting it in the
 \code{TreeLevelEWSBSolution} variable in the model file.  This is for
-example done in the $Z_3$-violating NMSSM (\code{SMSSM}), where $\mu$
-is chosen to be fixed by the EWSB equations: There the tree-level
-solution for $\mu$ has the form
+example the case in the $Z_3$-violating NMSSM (\code{SMSSM}), where
+$\mu$ is chosen to be fixed by the EWSB equations: There the
+tree-level solution for $\mu$ has the form
 %
 \begin{align}
   \mu = -\frac{v_s \lambda}{\sqrt{2}} + \sign X \cdot \sqrt{\ldots}
 \end{align}
 %
-with a non-global $\sign X$.  In this model the user can parametrize
-the tree-level solution in terms of $\sign X$ in the
-\code{TreeLevelEWSBSolution} variable and add $\sign X$ by hand to the
-list of free input parameters, see
-\code{model_files/SMSSM/FlexibleSUSY.m.in} for an example.  If the
-user decides to not pick a particular solution by leaving the variable
-\code{TreeLevelEWSBSolution} empty, \fs tries to find a solution to
-the tree-level EWSB equations numerically via an iteration.  In this
-case, however, the user does not have the option to chose between the
-different solutions.
+with a non-global $\sign X$.  When \fs solves the tree-level EWSB
+equations for $\mu$, $B\mu$ and $\xi_S$ it finds the two solutions and
+writes them to \code{models/SMSSM/SMSSM_tree_level_EWSB_solution.m} in
+the form
+%
+\begin{lstlisting}[language=Mathematica]
+{
+   {{B[\[Mu]] -> ...}},
+   {
+      {\[Mu] -> (-20*Sqrt[2]*vd*vS*(\[Lambda] + conj[\[Lambda]])
+                 - Sqrt[...])/(80*vd)},
+      {\[Mu] -> (-20*Sqrt[2]*vd*vS*(\[Lambda] + conj[\[Lambda]])
+                 + Sqrt[...])/(80*vd)}
+   },
+   {{L[L1] -> ...}}
+}
+\end{lstlisting}
+%
+In the above solutions the dots stand for the full expression, which
+is left out here for better readability.  Inspecting the two above
+solutions for $\mu$, one finds that both can be parametrized by an
+additional free sign in front of the \code{Sqrt[...]}.  The user can
+now introduce an additional free sign by hand in the \code{MINPAR}
+block
+%
+\begin{lstlisting}[language=Mathematica]
+MINPAR = {
+   {1, m0},
+   {2, m12},
+   {3, TanBeta},
+   {4, Sign[X]},  (* <-- additional free sign *)
+   {5, Azero}
+};
+\end{lstlisting}
+%
+and set the the tree-level solution, parametrized in terms of
+\code{Sign[X]}, in the \code{TreeLevelEWSBSolution} variable in
+the model file:
+%
+\begin{lstlisting}
+TreeLevelEWSBSolution = {
+   { B[\[Mu]], ... },
+   { \[Mu], (-20*Sqrt[2]*vd*vS*(\[Lambda] + conj[\[Lambda]])
+             + Sign[X] * Sqrt[...])/(80*vd) },
+   { L[L1], ... }
+};
+\end{lstlisting}
+%
+One can now chose between the two solutions by setting entry $4$ in
+the \code{MINPAR} block of the SLHA input file to either $+1$ or $-1$.
+See \code{model_files/SMSSM/FlexibleSUSY.m.in} for a complete example
+model file.  If the user decides to not pick a particular solution by
+leaving the variable \code{TreeLevelEWSBSolution} empty, \fs tries to
+find a solution to the tree-level EWSB equations numerically via an
+iteration.  In this case, however, the user does not have the option
+to chose between the different solutions.
 
 %
 If a solution of the tree-level EWSB equations has been found, the
